<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RegistroUsuario">

    <LinearLayout
        android:layout_width="400dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:orientation="vertical"
        tools:ignore="TextSizeCheck"
        >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        tools:ignore="UselessParent">

        <Space
            android:layout_width="match_parent"
            android:layout_height="40dp" />

        <ImageView
            android:id="@+id/imgLogo"
            android:layout_width="130sp"
            android:layout_height="130sp"
            android:layout_gravity="center"
            android:contentDescription="@string/image"
            app:srcCompat="@drawable/logo_notexto"
            />

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="45sp"
            android:layout_gravity="center"
            android:contentDescription="@string/texto"
            android:scaleType="fitCenter"
            android:src="@drawable/logo_texto" />


        <TextView
            android:id="@+id/txtRegistroUsuario"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:gravity="center"
            android:text="@string/registro_de_usuario"
            android:textColor="@color/greensoft"
            android:textSize="35sp"
            android:textStyle="bold"
            tools:ignore="TextSizeCheck,TextContrastCheck" />
        <Space
            android:layout_width="match_parent"
            android:layout_height="15sp"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:paddingStart="30dp"
            android:paddingEnd="30dp"
            android:text="@string/para_acceder_a_la_aplicaci_n_por_favor_ingrese_los_siguientes_datos"
            android:textColor="@color/black"
            android:fontFamily="@font/opensans_light"
            android:textSize="13sp"
            />
        <Space
            android:layout_width="match_parent"
            android:layout_height="20sp"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="start"
            android:paddingStart="60sp"
            android:paddingEnd="60sp"
            android:text="@string/ingrese_una_direcci_n_de_correo_electr_nico"
            android:textColor="@color/black"
            android:textSize="14sp"
            android:fontFamily="@font/opensans_light"
            />

        <EditText
            android:id="@+id/EdText_Correo"
            android:layout_width="300sp"
            android:layout_height="48dp"
            android:layout_gravity="center"
            android:autofillHints="emailAddress"
            android:backgroundTint="#00AA64"
            android:ems="10"
            android:fontFamily="@font/opensans_light"
            android:hint="@string/nombre_correo_com"
            android:inputType="textEmailAddress"
            android:paddingStart="8dp"
            android:paddingEnd="8sp"
            android:textSize="14sp"
            tools:ignore="TextContrastCheck" />


        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5sp"
            android:gravity="start"
            android:paddingStart="60sp"
            android:paddingEnd="60sp"
            android:text="@string/ingrese_una_contrase_a_segura"
            android:textColor="@color/black"
            android:textSize="14sp"
            android:fontFamily="@font/opensans_light" />

        <EditText
            android:id="@+id/EdText_Contraseña"
            android:layout_width="300sp"
            android:layout_height="48dp"
            android:layout_gravity="center"
            android:autofillHints="password"
            android:backgroundTint="#00AA64"
            android:ems="10"
            android:fontFamily="@font/opensans_light"
            android:hint="@string/contrase_a"
            android:inputType="textPassword"
            android:paddingStart="8dp"
            android:paddingEnd="8dp"
            android:textSize="14sp"
            tools:ignore="TextContrastCheck,DuplicateSpeakableTextCheck" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5sp"
            android:gravity="start"
            android:paddingStart="60sp"
            android:paddingEnd="60sp"
            android:text="@string/repita_la_contrase_a"
            android:textColor="@color/black"
            android:textSize="14sp"
            android:fontFamily="@font/opensans_light" />

        <EditText
            android:id="@+id/EdText_RepetirContraseña"
            android:layout_width="300sp"
            android:layout_height="48dp"
            android:layout_gravity="center"
            android:autofillHints="password"
            android:backgroundTint="#00AA64"
            android:ems="10"
            android:fontFamily="@font/opensans_light"
            android:hint="@string/contrase_a"
            android:inputType="textPassword"
            android:paddingStart="8dp"
            android:paddingEnd="8dp"
            android:textSize="14sp"
            tools:ignore="TextContrastCheck" />
        <Space
            android:layout_width="match_parent"
            android:layout_height="25sp"/>

        <CheckBox
            android:id="@+id/CheckBox_Condiciones"
            android:layout_width="320dp"
            android:layout_height="100dp"
            android:layout_marginStart="50dp"
            android:layout_marginEnd="50dp"
            android:buttonTint="#22AA00"
            android:fontFamily="@font/opensans_light"
            android:layoutDirection="rtl"
            android:text="@string/terminos_app"
            android:textColor="@color/black"
            android:textSize="12sp"
            tools:ignore="TextSizeCheck" />

        <Button
            android:id="@+id/btn_Registrarse"
            android:layout_width="300dp"
            android:layout_height="55dp"
            android:layout_gravity="center"
            android:layout_margin="18dp"
            android:backgroundTint="@color/greensoft"
            android:fontFamily="@font/opensans_bold"
            android:text="@string/registrarse"
            android:textColor="@color/white"
            android:textSize="15sp"
            app:cornerRadius="5sp"
            tools:ignore="TextContrastCheck" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="48dp"
                android:text="@string/ya_tienes_una_cuenta"
                android:fontFamily="@font/opensans_light"
                android:textStyle="bold"
                android:gravity="center"
                android:textColor="#000000"
                android:textSize="15sp" />

            <Space
                android:layout_width="8sp"
                android:layout_height="match_parent"/>

            <TextView
                android:id="@+id/Link_IrInicio"
                android:layout_width="wrap_content"
                android:layout_height="48dp"
                android:fontFamily="@font/opensans_bold"
                android:gravity="center"
                android:text="@string/ir_al_inicio_de_sesi_n"
                android:textColor="#34B200"
                android:textColorLink="#7FF066"
                android:textSize="15sp"
                android:textStyle="bold"
                tools:ignore="TextContrastCheck" />

        </LinearLayout>

    </LinearLayout>

    </LinearLayout>
</ScrollView>